[package]
name = "file-browser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file-browser"
path = "src/bin/main.rs"

[lib]
name = "file_browser"
path = "src/lib.rs"

[dependencies]
crossterm = "0.23.2"
ignore = "0.4.18"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.12"
tui = "0.18.0" 
